force-app/main/default/objects/L_PR_Idea__c/L_PR_Idea__c.object-meta.xml
<CustomObject>
    <description>Idea/ Lead object being used for PRM Application</description>
    <label>PRM Lead</label>
    <nameField>
        <label>Lead Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>