force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Closed_Reason__c</fullName>
    <description>Text field to describe why the Lead/Idea did not qualify/succeed</description>
    <label>Closed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>