force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Converted_Date__c</fullName>
    <description>Date Lead was converted to Opportunity</description>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>