force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Description__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Description__c</fullName>
    <description>Detailed description about the Lead/Idea.</description>
    <label>Lead Description</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>