force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Discipline__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Discipline__c</fullName>
    <description>Curriculum and business areas this Lead relates to</description>
    <label>Disciplines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Discipline</valueSetName>
    </valueSet>
</CustomField>