force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_La_Trobe_Organisation_Unit__c.field-meta.xml
<CustomField>
    <fullName>L_PR_La_Trobe_Organisation_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>La Trobe Organisation Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>La Trobe Organisation Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRM Leads (La Trobe Organisation Unit)</relationshipLabel>
    <relationshipName>PRM_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>