force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Lead_Status__c</fullName>
    <description>Indicates the progress of the Lead/Idea.</description>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Open – Contacted</fullName>
            </value>
            <value>
                <fullName>Open – Unqualified</fullName>
            </value>
            <value>
                <fullName>Open – Qualified</fullName>
            </value>
            <value>
                <fullName>Closed – Converted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>