force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Organisation__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a reference to related External Organisation or Educational Institution.</description>
    <label>Organisation Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_RS_External_Organisation</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_ST_Educational_Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRM Leads</relationshipLabel>
    <relationshipName>PRM_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>