force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Parent__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Parent Lead/Idea record. If populated, it means this is a child Lead/Idea record.</description>
    <label>Parent Lead</label>
    <referenceTo>L_PR_Idea__c</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>Related_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>