force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Rating__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Rating__c</fullName>
    <description>Provides a rating on the possible success of this Lead/Idea</description>
    <label>Lead Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
                <default>true</default>
                <label>Warm</label>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>