force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Source__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Source__c</fullName>
    <description>Identifies the origin of this Lead/Idea.</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Source</valueSetName>
    </valueSet>
</CustomField>