force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Sub_Type__c</fullName>
    <description>Sub Type field provides further  categorisation/ classification list based on the type for this Lead/Idea</description>
    <label>Lead Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>L_PR_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>L_PR_Sub_Type</valueSetName>
    </valueSet>
</CustomField>