force-app/main/default/objects/L_PR_Idea__c/fields/L_PR_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Type__c</fullName>
    <description>Type field provides a categorisation/ classification  list for this Lead/Idea.</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Type</valueSetName>
    </valueSet>
</CustomField>