force-app/main/default/objects/L_PR_Idea__c/validationRules/Active_Parent_Lead_on_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Parent_Lead_on_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (ISPICKVAL( L_PR_Parent__r.L_PR_Lead_Status__c , &apos;Closed&apos;) || ISPICKVAL(L_PR_Parent__r.L_PR_Lead_Status__c , &apos;Closed – Converted&apos;))</errorConditionFormula>
    <errorDisplayField>L_PR_Parent__c</errorDisplayField>
    <errorMessage>Cannot link to a Parent Lead with status Closed.</errorMessage>
</ValidationRule>