force-app/main/default/objects/L_PR_Idea__c/validationRules/Cannot_edit_Closed_Idea.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Closed_Idea</fullName>
    <active>true</active>
    <errorConditionFormula>OR(((ISPICKVAL(PRIORVALUE( L_PR_Lead_Status__c ),&apos;Closed&apos;) || ISPICKVAL(PRIORVALUE( L_PR_Lead_Status__c ),&apos;Closed – Converted&apos;)) &amp;&amp; ISCHANGED(L_PR_Lead_Status__c)),
	((ISPICKVAL(L_PR_Lead_Status__c ,&apos;Closed&apos;)|| ISPICKVAL(L_PR_Lead_Status__c ,&apos;Closed – Converted&apos;)) &amp;&amp; NOT(ISCHANGED(L_PR_Lead_Status__c)))) &amp;&amp; NOT(ISNEW() )</errorConditionFormula>
    <errorMessage>Closed or Converted leads cannot be edited.</errorMessage>
</ValidationRule>