force-app/main/default/objects/L_PR_Idea__c/validationRules/Cannot_fill_Closed_Reason_if_not_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_fill_Closed_Reason_if_not_Closed</fullName>
    <active>true</active>
    <description>Closed Reason should only be filled when Status is selected as Closed</description>
    <errorConditionFormula>NOT( ISBLANK( L_PR_Closed_Reason__c ) ) &amp;&amp;  NOT(ISPICKVAL( L_PR_Lead_Status__c , &apos;Closed&apos;)) &amp;&amp; (ISCHANGED(L_PR_Closed_Reason__c) || ISNEW())</errorConditionFormula>
    <errorDisplayField>L_PR_Closed_Reason__c</errorDisplayField>
    <errorMessage>Closed Reason should only be filled when Status is selected as &apos;Closed&apos;</errorMessage>
</ValidationRule>