force-app/main/default/objects/L_PR_Idea__c/validationRules/Closure_reason_mandatory_when_Idea_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Closure_reason_mandatory_when_Idea_Close</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(L_PR_Lead_Status__c, &apos;Closed&apos;) &amp;&amp; ISBLANK( L_PR_Closed_Reason__c ) &amp;&amp; (ISCHANGED(L_PR_Lead_Status__c) || ISNEW())</errorConditionFormula>
    <errorDisplayField>L_PR_Closed_Reason__c</errorDisplayField>
    <errorMessage>Please fill Closed Reason while setting the Lead status as Closed.</errorMessage>
</ValidationRule>