force-app/main/default/objects/L_PR_Idea__c/validationRules/External_Org_External_Contact_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Org_External_Contact_Mandatory</fullName>
    <active>true</active>
    <description>External Org or External Contact is mandatory</description>
    <errorConditionFormula>ISBLANK(L_PR_Organisation__c ) &amp;&amp;  ISBLANK( L_PR_Affiliation__c ) &amp;&amp;  NOT(ISPICKVAL( L_PR_Lead_Status__c , &apos;Closed – Converted&apos;) )</errorConditionFormula>
    <errorMessage>Organisation Name or Affiliation is mandatory.</errorMessage>
</ValidationRule>