force-app/main/default/objects/L_PR_Idea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_PR_Organisation__c</columns>
    <columns>L_PR_La_Trobe_Organisation_Unit__c</columns>
    <columns>L_PR_Affiliation__c</columns>
    <columns>L_PR_Lead_Status__c</columns>
    <columns>L_PR_Type__c</columns>
    <columns>L_PR_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>